--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.8.1",
+        "@emotion/styled": "^11.8.1",
+        "@mui/material": "^5.4.3",
         "gh-pages": "^3.2.3",
         "node-sass": "^7.0.1",
         "react": "^17.0.2",
