--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dependencies": {
         "@emotion/react": "^11.8.1",
         "@emotion/styled": "^11.8.1",
+        "@material-ui/icons": "^4.11.2",
+        "@mui/icons-material": "^5.4.2",
         "@mui/material": "^5.4.3",
         "gh-pages": "^3.2.3",
         "node-sass": "^7.0.1",
